# slip_nucleation_2023

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build_E5v4.slurm  build_s6g1.slurm  environment.yaml  environment_plot.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml  deprecated.yml
AcousticEmission/: main.cpp  makeJob_compile.py
AcousticEmission/data/nx=3^6x2_stress=0d6/: convert.py
AvalancheEvolution_stress/: CMakeLists.txt  collect.py  main.cpp  makeJob_compile.py
CrackEvolution_raw_stress/: CMakeLists.txt  collect_energy.py  collect_forces.py  collect_select.py  collect_stress.py  collect_stress_middle.py  collect_weak-layer.py  debug.py  find_completed.py  job_collect_energy.py  job_collect_forces.py  job_collect_stress.py  job_collect_stress_middle.py  job_collect_weak-layer.py  job_serial.py  job_serial_no-damping.py  main.cpp
CrackEvolution_strain/: CMakeLists.txt  check.py  collect_sync-A_element.py  collect_sync-A_global.py  collect_sync-A_plastic.py  collect_sync-t_element.py  collect_sync-t_global.py  collect_sync-t_plastic.py  main.cpp  makeJob_compile.py
CrackEvolution_stress/: CMakeLists.txt  check.py  collect_scatter.py  collect_sliplaw.py  collect_sync-A_connect.py  collect_sync-A_crack-density.py  collect_sync-A_element-components.py  collect_sync-A_element.py  collect_sync-A_epspdot.py  collect_sync-A_global.py  collect_sync-A_plastic.py  collect_sync-A_velocity.py  collect_sync-t(A=N)_plastic.py  collect_sync-t_crack-density.py  collect_sync-t_element.py  collect_sync-t_global.py  collect_sync-t_plastic.py  main.cpp  makeJob_compile.py
CrackEvolution_weak-sync-A_strain/: CMakeLists.txt  job_parallel.py  main.cpp
CrackEvolution_weak-sync-A_stress/: CMakeLists.txt  job_parallel.py  main.cpp
EnsembleInfo/: CMakeLists.txt  environment.yaml  main.cpp  makeJob.py
EventEvolution_strain/: CMakeLists.txt  job_parallel.py  job_serial-group.py  job_serial.py  main.cpp
EventEvolution_stress/: CMakeLists.txt  build_E5v4.slurm  build_s6g1.slurm  find_completed.py  job_parallel.py  job_serial-group.py  job_serial.py  main.cpp
PushBarrier/: CMakeLists.txt  README.md  branch_PushRecursiveQuasiThermal.py  convert_add-trigger.py  find_completed.py  job_brachsims.py  job_serial-group.py  job_serial.py  job_write-trigger.py  main.cpp  post_squash-to-push.py
PushBarrierRecursive/: CMakeLists.txt  README.md  branch_sims.py  find_completed.py  job_serial.py  main.cpp
PushElement/: CMakeLists.txt  README.md  job_branchsims.py  job_serial.py  list_status.py  main.cpp
PushElementThermal/: CMakeLists.txt  job_branchsims.py  job_serial.py  main.cpp
PushRecursiveQuasiThermal/: CMakeLists.txt  README.md  find_completed.py  job_branchsims.py  job_branchsims_preparation-only.py  job_serial-group.py  job_serial.py  job_serial_no-output-group.py  job_serial_no-output.py  list_status.py  main.cpp  mechanism.py  mechanism_stress-only.py
PushWeakest/: CMakeLists.txt  job_branchsims.py  job_serial.py  list_status.py  main.cpp
PushWeakestDebug/: CMakeLists.txt  README.md  job_serial.py  list_status.py  main.cpp
PushWeakestRecursive/: job_branchsims.py  job_serial.py  main.cpp
Run/: CMakeLists.txt  LargePinnedAvalanche.py  PinAndTrigger.py  PinAndTrigger_collect.py  PinAndTrigger_combine-collect.py  PinAndTrigger_data.py  PinAndTrigger_interpret.py  PinAndTrigger_interpret_spatial.py  PinAndTrigger_job-serial-compact.py  PinAndTrigger_job-serial.py  PinAndTrigger_rerun_sync-A.py  PinAndTrigger_rerun_sync-A_job-serial.py  job_serial-group.py  main.cpp
TimeEvolution/: CMakeLists.txt  collect.py  main.cpp  makeJob.py
TimeEvolutionFull/: collect_stress.py  main.cpp  makeJob.py  makeJob_compile.py
TimeEvolutionOld/: CMakeLists.txt  makeJob.py  makeJob_compile.py
UnloadPushElement/: CMakeLists.txt  README.md  job_branchsims.py  job_serial.py  list_status.py  main.cpp
UnloadPushElement_addBeginState/: CMakeLists.txt  job.py  main.cpp
docs/: api.rst  conf.py  index.rst
docs/_templates/autosummary/: module.rst
docs/workflow/: flow.rst  index.rst  quasistatic.rst
figures/: measurements.py
figures/AvalancheAfterPush/: .gitignore  Ac-stress.py  Ac.py  Ac_sigmastar-stress.py  Ac_sigmastar.py  definitions.py
figures/AvalancheEvolution/: crack_evolution.py  definitions.py  time_evolution.py
figures/CrackEvolution/: S_plastic.py  crack_evolution.py  definitions.py  epsp_plastic.py  lefm.py  lefm_collapse.py  lefm_fit-kII_xx-yy.py  lefm_theory.py  sigd_plastic.py  slip_plastic.py  sliplaw.py  stress_imshow.py  stress_plastic.py  stress_sync-A.py  supershear-transition.py  time_evolution.py  x_plastic.py
figures/EnsembleYieldDistance/: Px_stress=var.py  definitions.py
figures/TimeEvolution/: definitions.py  meta-data.py  size.py  size_all.py  stress.py  stress_middle-layer.py  stress_middle-layer_all.py  typical.py  velocity.py
figures/TimeEvolutionFull/: definitions.py  stress.py
literature/Kammer2018/: Fig2c.idraw  Fig2c.py
mycode_front/: Dynamics.py  EventEvolution.py  EventMap.py  Flow.py  MeasureDynamics.py  PinAndTrigger.py  QuasiStatic.py  System.py  Trigger.py  __init__.py  slurm.py  storage.py  system.py  tag.py  tools.py
slip_nucleation_2023/: Dynamics.py  EventMap.py  Flow.py  QuasiStatic.py  Trigger.py  tag.py  tools.py
slip_nucleation_2023/mycode_front/: EventMap.py  Flow.py  storage.py
tests/: EventMap.py  Flow.py  MeasureDynamics.py  PinAndTrigger.py  QuasiStatic.py  System.py  Trigger.py  data_System_small.yaml  slurm.py  storage.py  system.py  system_small.yaml  tag.py  test_Flow.py  test_ensemble.py  test_slurm.py  test_storage.py  test_tag.py  test_tools.py  tools.py
