[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
authors = [{name = "Tom de Geus", email = "tom@geus.me"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "click",
    "enstat >=0.5.0",
    "FrictionQPotFEM >=0.23.1",
    "GMatElastoPlasticQPot >=0.18.2",
    "GooseFEM >=1.4.0",
    "GooseHDF5 >=0.22.0",
    "h5py",
    "numpy",
    "prettytable",
    "prrng",
    "pyyaml",
    "shelephant",
    "tqdm",
    "XDMFWrite_h5py",
]
description = "Shell between data and FrictionQPotFEM"
dynamic = ["version"]
name = "slip_nucleation_2023"
readme = "README.md"
requires-python = ">=3.6"

[project.scripts]
Dynamics_AverageSystemSpanning = "slip_nucleation_2023.Dynamics:cli_average_systemspanning"
Dynamics_PlotMeshHeight = "slip_nucleation_2023.Dynamics:cli_plot_height"
Dynamics_Run = "slip_nucleation_2023.Dynamics:cli_run"
Dynamics_RunHighFrequency = "slip_nucleation_2023.Dynamics:cli_run_highfrequency"
Dynamics_TransformDeprecated = "slip_nucleation_2023.Dynamics:cli_transform_deprecated"
EventMapInfo = "slip_nucleation_2023.EventMap:cli_basic_output"
EventMap_run = "slip_nucleation_2023.EventMap:cli_run"
Flow_EnsembleInfo = "slip_nucleation_2023.Flow:cli_ensembleinfo"
Flow_Generate = "slip_nucleation_2023.Flow:cli_generate"
Flow_Paraview = "slip_nucleation_2023.Flow:cli_paraview"
Flow_Plot = "slip_nucleation_2023.Flow:cli_plot"
Flow_Rename = "slip_nucleation_2023.Flow:cli_rename"
Flow_Run = "slip_nucleation_2023.Flow:cli_run"
Flow_TransformDeprecated = "slip_nucleation_2023.Flow:cli_transform_deprecated"
Flow_VelocityJump_Branch = "slip_nucleation_2023.Flow:cli_branch_velocityjump"
Flow_VelocityJump_EnsembleInfo = "slip_nucleation_2023.Flow:cli_ensembleinfo_velocityjump"
Flow_VelocityJump_Plot = "slip_nucleation_2023.Flow:cli_plot_velocityjump"
Flow_VelocityJump_UpdateBranch = "slip_nucleation_2023.Flow:cli_update_branch_velocityjump"
QuasiStatic_EnsembleInfo = "slip_nucleation_2023.QuasiStatic:cli_ensembleinfo"
QuasiStatic_Generate = "slip_nucleation_2023.QuasiStatic:cli_generate"
QuasiStatic_MakeJobDynamicsOfSystemSpanning = "slip_nucleation_2023.QuasiStatic:cli_rerun_dynamics_job_systemspanning"
QuasiStatic_MakeJobEventMapOfSystemSpanning = "slip_nucleation_2023.QuasiStatic:cli_rerun_event_job_systemspanning"
QuasiStatic_MoveMeta = "slip_nucleation_2023.QuasiStatic:cli_move_meta"
QuasiStatic_Plot = "slip_nucleation_2023.QuasiStatic:cli_plot"
QuasiStatic_Run = "slip_nucleation_2023.QuasiStatic:cli_run"
QuasiStatic_SimulationStatus = "slip_nucleation_2023.QuasiStatic:cli_status"
QuasiStatic_StateAfterSystemSpanning = "slip_nucleation_2023.QuasiStatic:cli_state_after_systemspanning"
QuasiStatic_TransformDeprecated = "slip_nucleation_2023.QuasiStatic:cli_transform_deprecated"
Trigger_EnsembleInfo = "slip_nucleation_2023.Trigger:cli_ensembleinfo"
Trigger_EnsemblePack = "slip_nucleation_2023.Trigger:cli_ensemblepack"
Trigger_EnsemblePackMerge = "slip_nucleation_2023.Trigger:cli_ensemblepack_merge"
Trigger_JobDeltaSigma = "slip_nucleation_2023.Trigger:cli_job_deltasigma"
Trigger_JobRerunDynamics = "slip_nucleation_2023.Trigger:cli_job_rerun_dynamics"
Trigger_JobRerunEventMap = "slip_nucleation_2023.Trigger:cli_job_rerun_eventmap"
Trigger_MoveCompleted = "slip_nucleation_2023.Trigger:cli_move_completed"
Trigger_Run = "slip_nucleation_2023.Trigger:cli_run"
Trigger_TransformDeprecatedEnsemblePack = "slip_nucleation_2023.Trigger:cli_transform_deprecated_pack"
Trigger_TransformDeprecatedEnsemblePack2 = "slip_nucleation_2023.Trigger:cli_transform_deprecated_pack2"
Trigger_TransformDeprecatedEnsemblePack3 = "slip_nucleation_2023.Trigger:cli_transform_deprecated_pack3"

[project.urls]
Source = "https://github.com/tdegeus/slip_nucleation_2023"

[tool.setuptools_scm]
write_to = "slip_nucleation_2023/_version.py"
