[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
authors = [{name = "Tom de Geus", email = "tom@geus.me"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = [
    "click",
    "enstat >=0.5.0",
    "FrictionQPotFEM >=0.23.1",
    "GMatElastoPlasticQPot >=0.18.2",
    "GooseFEM >=1.4.0",
    "GooseHDF5 >=0.22.0",
    "h5py",
    "numpy",
    "prettytable",
    "prrng",
    "pyyaml",
    "shelephant",
    "tqdm",
    "XDMFWrite_h5py",
]
description = "Shell between data and FrictionQPotFEM"
dynamic = ["version"]
name = "slip_nucleation_2023"
readme = "README.md"
requires-python = ">=3.6"

[project.scripts]
Dynamics_AverageSystemSpanning = "slip_nucleation_2023.Dynamics:AverageSystemSpanning"
Dynamics_PlotMeshHeight = "slip_nucleation_2023.Dynamics:PlotMeshHeight"
Dynamics_Run = "slip_nucleation_2023.Dynamics:Run"
Dynamics_RunHighFrequency = "slip_nucleation_2023.Dynamics:RunHighFrequency"
Dynamics_TransformDeprecated = "slip_nucleation_2023.Dynamics:TransformDeprecated"
EventMap_Info = "slip_nucleation_2023.EventMap:Info"
EventMap_Run = "slip_nucleation_2023.EventMap:Run"
Flow_EnsembleInfo = "slip_nucleation_2023.Flow:EnsembleInfo"
Flow_Generate = "slip_nucleation_2023.Flow:Generate"
Flow_Paraview = "slip_nucleation_2023.Flow:Paraview"
Flow_Plot = "slip_nucleation_2023.Flow:Plot"
Flow_Rename = "slip_nucleation_2023.Flow:Rename"
Flow_Run = "slip_nucleation_2023.Flow:Run"
Flow_TransformDeprecated = "slip_nucleation_2023.Flow:TransformDeprecated"
Flow_VelocityJump_Branch = "slip_nucleation_2023.Flow:VelocityJump"
Flow_VelocityJump_EnsembleInfo = "slip_nucleation_2023.Flow:EnsembleInfo_velocityjump"
Flow_VelocityJump_Plot = "slip_nucleation_2023.Flow:Plot_velocityjump"
Flow_VelocityJump_UpdateBranch = "slip_nucleation_2023.Flow:VelocityJump"
QuasiStatic_EnsembleInfo = "slip_nucleation_2023.QuasiStatic:EnsembleInfo"
QuasiStatic_Generate = "slip_nucleation_2023.QuasiStatic:Generate"
QuasiStatic_MakeJobDynamicsOfSystemSpanning = "slip_nucleation_2023.QuasiStatic:MakeJobDynamicsOfSystemSpanning"
QuasiStatic_MakeJobEventMapOfSystemSpanning = "slip_nucleation_2023.QuasiStatic:MakeJobEventMapOfSystemSpanning"
QuasiStatic_MoveMeta = "slip_nucleation_2023.QuasiStatic:MoveMeta"
QuasiStatic_Plot = "slip_nucleation_2023.QuasiStatic:Plot"
QuasiStatic_Run = "slip_nucleation_2023.QuasiStatic:Run"
QuasiStatic_SimulationStatus = "slip_nucleation_2023.QuasiStatic:SimulationStatus"
QuasiStatic_StateAfterSystemSpanning = "slip_nucleation_2023.QuasiStatic:StateAfterSystemSpanning"
QuasiStatic_TransformDeprecated = "slip_nucleation_2023.QuasiStatic:TransformDeprecated"
Trigger_EnsembleInfo = "slip_nucleation_2023.Trigger:EnsembleInfo"
Trigger_EnsemblePack = "slip_nucleation_2023.Trigger:EnsemblePack"
Trigger_EnsemblePackMerge = "slip_nucleation_2023.Trigger:EnsemblePackMerge"
Trigger_JobDeltaSigma = "slip_nucleation_2023.Trigger:JobDeltaSigma"
Trigger_JobRerunDynamics = "slip_nucleation_2023.Trigger:JobRerunDynamics"
Trigger_JobRerunEventMap = "slip_nucleation_2023.Trigger:JobRerunEventMap"
Trigger_MoveCompleted = "slip_nucleation_2023.Trigger:MoveCompleted"
Trigger_Run = "slip_nucleation_2023.Trigger:Run"
Trigger_TransformDeprecatedEnsemblePack = "slip_nucleation_2023.Trigger:TransformDeprecatedEnsemblePack"
Trigger_TransformDeprecatedEnsemblePack2 = "slip_nucleation_2023.Trigger:TransformDeprecatedEnsemblePack2"
Trigger_TransformDeprecatedEnsemblePack3 = "slip_nucleation_2023.Trigger:TransformDeprecatedEnsemblePack3"

[project.urls]
Source = "https://github.com/tdegeus/slip_nucleation_2023"

[tool.setuptools_scm]
write_to = "slip_nucleation_2023/_version.py"
